[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Level.gd" type="Script" id=1]
[ext_resource path="res://TileSets/Walls&Carpets.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Key.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/DoorReqKey.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/EnemyAI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/iteam.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/170.png" type="Texture" id=9]
[ext_resource path="res://Sprites/102.png" type="Texture" id=10]
[ext_resource path="res://TileSets/Furnichers.tres" type="TileSet" id=11]
[ext_resource path="res://Sprites/172.png" type="Texture" id=12]
[ext_resource path="res://Sprites/251.png" type="Texture" id=13]
[ext_resource path="res://Sprites/145.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Finish_line_detecter.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/SceneChanger.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/BGMusic.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/LoseSFX.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/ExitDoorSFX.tscn" type="PackedScene" id=20]

[node name="LVL2" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )
ValueToExit = 50

[node name="Walls&Floor&Carpets" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 4, 0, 2, 4, 0, 3, 19, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 13, 0, 27, 19, 0, 29, 19, 0, 30, 4, 0, 31, 1, 0, 65536, 2, 0, 65537, 28, 0, 65538, 29, 0, 65539, 29, 0, 65540, 29, 0, 65541, 29, 0, 65542, 29, 0, 65543, 30, 0, 65544, 2, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 5, 0, 65563, 5, 0, 65564, 96, 0, 65565, 5, 0, 65566, 5, 0, 65567, 2, 0, 131072, 2, 0, 131073, 31, 0, 131074, 32, 0, 131075, 32, 0, 131076, 32, 0, 131077, 32, 0, 131078, 32, 0, 131079, 33, 0, 131080, 2, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 131097, 5, 0, 131098, 5, 0, 131099, 5, 0, 131100, 97, 0, 131101, 5, 0, 131102, 5, 0, 131103, 2, 0, 196608, 2, 0, 196609, 1610612775, 0, 196610, 35, 0, 196611, 35, 0, 196612, 35, 0, 196613, 35, 0, 196614, 35, 0, 196615, 34, 0, 196616, 2, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 5, 0, 196633, 5, 0, 196634, 5, 0, 196635, 5, 0, 196636, 97, 0, 196637, 5, 0, 196638, 5, 0, 196639, 2, 0, 262144, 2, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 14, 0, 262149, 23, 0, 262150, 12, 0, 262151, 4, 0, 262152, 8, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 262169, 5, 0, 262170, 5, 0, 262171, 5, 0, 262172, 97, 0, 262173, 5, 0, 262174, 5, 0, 262175, 2, 0, 327680, 2, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327704, 5, 0, 327705, 5, 0, 327706, 5, 0, 327707, 5, 0, 327708, 98, 0, 327709, 5, 0, 327710, 5, 0, 327711, 2, 0, 393216, 2, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 5, 0, 393238, 5, 0, 393239, 5, 0, 393240, 5, 0, 393241, 5, 0, 393242, 5, 0, 393243, 5, 0, 393244, 5, 0, 393245, 5, 0, 393246, 5, 0, 393247, 2, 0, 458752, 2, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 458778, 5, 0, 458779, 5, 0, 458780, 5, 0, 458781, 5, 0, 458782, 5, 0, 458783, 2, 0, 524288, 2, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524315, 5, 0, 524316, 5, 0, 524317, 5, 0, 524318, 5, 0, 524319, 2, 0, 589824, 2, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 2, 0, 655360, 2, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 2, 0, 720896, 2, 0, 720897, 13, 0, 720898, 20, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 1, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 2, 0, 786432, 2, 0, 786433, 77, 0, 786434, 78, 0, 786435, 78, 0, 786436, 78, 0, 786437, 78, 0, 786438, 78, 0, 786439, 79, 0, 786440, 1610612835, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 786458, 0, 0, 786459, 4, 0, 786460, 4, 0, 786461, 4, 0, 786462, 4, 0, 786463, 2, 0, 851968, 2, 0, 851969, 80, 0, 851970, 81, 0, 851971, 81, 0, 851972, 81, 0, 851973, 81, 0, 851974, 81, 0, 851975, 82, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 851994, 1610612835, 0, 851995, 1610612770, 0, 851996, 1610612771, 0, 851997, 1610612771, 0, 851998, 1610612772, 0, 851999, 2, 0, 917504, 2, 0, 917505, 80, 0, 917506, 81, 0, 917507, 81, 0, 917508, 81, 0, 917509, 81, 0, 917510, 81, 0, 917511, 82, 0, 917512, 99, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 917530, 5, 0, 917531, 1610612769, 0, 917532, 1610612768, 0, 917533, 1610612768, 0, 917534, 1610612767, 0, 917535, 2, 0, 983040, 2, 0, 983041, 80, 0, 983042, 81, 0, 983043, 81, 0, 983044, 81, 0, 983045, 81, 0, 983046, 81, 0, 983047, 82, 0, 983048, 2, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 983066, 5, 0, 983067, 1610612769, 0, 983068, 1610612768, 0, 983069, 1610612768, 0, 983070, 1610612767, 0, 983071, -1610612714, 0, 1048576, 2, 0, 1048577, 80, 0, 1048578, 81, 0, 1048579, 81, 0, 1048580, 81, 0, 1048581, 81, 0, 1048582, 81, 0, 1048583, 82, 0, 1048584, 2, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1048602, 99, 0, 1048603, 1610612769, 0, 1048604, 1610612768, 0, 1048605, 1610612768, 0, 1048606, 1610612767, 0, 1048607, 2, 0, 1114112, 2, 0, 1114113, 83, 0, 1114114, 84, 0, 1114115, 84, 0, 1114116, 84, 0, 1114117, 84, 0, 1114118, 84, 0, 1114119, 85, 0, 1114120, 2, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 2, 0, 1114139, 1610612766, 0, 1114140, 1610612765, 0, 1114141, 1610612765, 0, 1114142, 1610612764, 0, 1114143, 2, 0, 1179648, 6, 0, 1179649, 13, 0, 1179650, 13, 0, 1179651, 13, 0, 1179652, 13, 0, 1179653, 13, 0, 1179654, 13, 0, 1179655, 13, 0, 1179656, 13, 0, 1179657, 13, 0, 1179658, 13, 0, 1179659, 13, 0, 1179660, 13, 0, 1179661, 13, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 13, 0, 1179667, 13, 0, 1179668, 13, 0, 1179669, 13, 0, 1179670, 13, 0, 1179671, 13, 0, 1179672, 13, 0, 1179673, 13, 0, 1179674, 13, 0, 1179675, 13, 0, 1179676, 13, 0, 1179677, 13, 0, 1179678, 13, 0, 1179679, 8, 0 )

[node name="Furnichers" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 65537, 22, 0, 65538, 3, 0, 65543, 7, 0, 65555, 7, 0, 393246, 7, 0, 458753, 7, 0, 786434, 22, 0, 786438, 22, 0, 851996, 24, 0, 851997, 24, 0, 1114116, 7, 0, 1114127, 12, 0, 1114128, 13, 0, 1114129, 14, 0, 1114130, 13, 0, 1114131, 12, 0, 1114132, 12, 0, 1114133, 13, 0 )

[node name="Key" parent="." instance=ExtResource( 3 )]
position = Vector2( 163.315, 82.4069 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 4 )]
position = Vector2( 972.108, 497.542 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
pause_mode = 2

[node name="DoorReqKey" parent="." instance=ExtResource( 6 )]
position = Vector2( 272.328, 435.25 )
rotation = -1.5708

[node name="EnemyAI" parent="." instance=ExtResource( 7 )]
position = Vector2( 174.724, 197.341 )

[node name="EnemyAI2" parent="." instance=ExtResource( 7 )]
position = Vector2( 908.932, 206.876 )

[node name="item" parent="." instance=ExtResource( 8 )]
position = Vector2( 144.102, 552.547 )
texture = ExtResource( 9 )
Value = 20

[node name="item2" parent="." instance=ExtResource( 8 )]
position = Vector2( 46.7544, 234.201 )
texture = ExtResource( 12 )
Value = 10

[node name="item3" parent="." instance=ExtResource( 8 )]
position = Vector2( 240.047, 40.5544 )
texture = ExtResource( 10 )

[node name="item4" parent="." instance=ExtResource( 8 )]
position = Vector2( 624.481, 41.5623 )
texture = ExtResource( 14 )

[node name="item5" parent="." instance=ExtResource( 8 )]
position = Vector2( 976.457, 203.827 )
texture = ExtResource( 13 )
Value = 10

[node name="Door" parent="." instance=ExtResource( 15 )]
position = Vector2( 912.19, 17.6999 )

[node name="Finish_line_detecter" parent="." instance=ExtResource( 16 )]
position = Vector2( 910.703, -4.01492 )

[node name="SceneChanger" parent="." instance=ExtResource( 17 )]
next_scene_path = "res://Scenes/LVL3.tscn"

[node name="BGMusic" parent="." instance=ExtResource( 18 )]

[node name="LoseSFX" parent="." instance=ExtResource( 19 )]

[node name="ExitDoorSFX" parent="." instance=ExtResource( 20 )]

[connection signal="body_entered" from="Finish_line_detecter" to="." method="_on_Finish_line_detecter_body_entered"]
